# mlex_dimension_reduction_pca

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  example_pca.yml  example_run.sh  example_umap.yml  pca_run.py  pyproject.toml  test_pca.py  utils.py
.github/workflows/: publish_docker.yml  python-app.yml
data/: .file_manager_vars.pkl
data/example_latentrepresentation/: f_vectors.parquet
data/example_shapes/: DemoLabels.npy  Demoshapes.npz  label_schema.json  pacmacX.npy
description/: PCA.json  PCA_v1.0.0.json
docker/: requirements.txt
example_yamls/: example_pca.yaml
src/: dim_reduction.py  parameters.py  pca_run.py
src/_test/: test_pca.py
src/mlex_dimension_reduction_pca/: pca_run.py  utils.py
src/utils/: data_utils.py  tiled_utils.py
